--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Adding module 19 workbooks
+Module_19
+AlphabetSoupCharity_starter_code.ipynb
+
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
